# ace3tool

./: .eslintrc.json  .gitignore  README.md  build_pages.sh  cypress.config.ts  export_data_summary.R  export_full_data.R  export_logistic_model.R  mdx-components.tsx  next.config.mjs  next_ghpages.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  scale_data.R  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: cypress.yml  nextjs.yml  test.yml
app/: globals.css  layout.tsx  opengraph-image.alt.txt  page.tsx  robots.txt  sitemap.ts
app/_components/: AnalyticsScript.tsx  AnalyticsUpdate.tsx  AreaIcon.tsx  HorizontalLegend.tsx  MainFooter.tsx  MainNavbar.tsx  NormPlotDisplay.tsx  PlotPlaceholder.tsx  PlotSkeleton.tsx  PlotTitle.tsx  PlotTitleWithTooltip.tsx  RiskElements.tsx  ScoreWidget.tsx  SwarmPlotDisplay.tsx  TermsModal.tsx  TotalScoreLegend.tsx  VerticalLegend.tsx
app/_data/: logistic_model_v1.json
app/_forms/: AceForm.tsx  AceFormProvider.tsx  ExplorerForm.tsx
app/_hooks/: useTotalScore.ts  useValidatedScores.ts
app/_model/: data_summary_v1.json  dist_summary_v1.json  full_data_v1.json  logistic_model_v1.json  model.ts  score_thresholds.json  total_model_v1.json
app/_plots/: DistPlotSmall.tsx  (+10 more)
docs/: 404.html  about.html  about.txt  explore.html  explore.txt  index.html  index.txt
examples/: logistic_example.py
lib/: logistic.ts
r_scripts/: README.md  export_full_data.R  export_logistic_model.R  scale_data.R
tests/: data_testing.test.ts  extreme_scores.test.ts  hooks.test.tsx  logistic.test.ts
types/: htl.d.ts
(+238 files in other folders)
