[project]
name = "ace"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "marius-mather", email = "marius.mather@sydney.edu.au"},
]
dependencies = [
    "statsmodels>=0.14.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
